styling landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,14 +12,17 @@
     <header>
       <nav class="container-navbar">
         <div class="logo">
-          <span>Aiddhul Beni</span>
+          <a href="#home">
+            Aiddhul Beni
+          </a>
         </div>
         <div class="item-list">
           <ul>
             <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="" class="btn-contact">Contact</a></li>
+            <li><a href="#project">Projects</a></li>
+            <li><a href="#contact" class="btn-contact">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -36,7 +39,7 @@
       </div>
       <div class="content-contact"></div>
       <div class="content-image">
-        <img src="./img/img.png" alt="landing page" width="450px" />
+        <img src="./img/img.png" alt="landing page" />
       </div>
     </section>
 
@@ -44,13 +47,12 @@
 
     <!-- about start -->
 
-    
     <section class="container-about" id="about">
       <div class="my-image">
         <img src="./img/man.jpg" alt="it's me" width="400px" />
       </div>
-      <article class="about-me" >
-        <h1 style="margin-bottom: 50px; font-size: 30px; " >About Me</h1>
+      <article class="about-me">
+        <h1 style="margin-bottom: 50px; font-size: 30px">About Me</h1>
         <p>
           Hi! I am Aiddhul Beni Putra, a web designer/developer focused on crafting great web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into web
           design/development since 2022. I enjoy creating beautifully designed, intuitive and functional websites.
@@ -64,11 +66,26 @@
     <!-- skills start -->
 
     <section class="container-skills" id="skills">
-      <div class="container-list-skills">
-        
-      </div>
+      <div class="container-list-skills"></div>
     </section>
 
-    <!-- skills end -->
+<!-- skills end -->
+
+    <!-- project start -->
+    <section class="container-project" id="project">
+      <h1>project</h1>
+    </section>
+    <!-- project end -->
+
+    <!-- contact start -->
+    <section class="container-contact" id="contact">
+      <form action="">
+        <input type="text" placeholder="Name"/><br>
+        <input type="email" name="email" id="" placeholder="Email"/><br>
+        <textarea name="message" id="message" cols="2" rows="4"></textarea><br>
+        <input type="button" value="Send" />
+      </form>   
+    </section>
+    <!-- contact end -->
   </body>
 </html>
