styling responsive for tablet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,9 +12,7 @@
     <header>
       <nav class="container-navbar">
         <div class="logo">
-          <a href="#home">
-            Aiddhul Beni
-          </a>
+          <a href="#home"> Aiddhul Beni </a>
         </div>
         <div class="item-list">
           <ul>
@@ -49,10 +47,10 @@
 
     <section class="container-about" id="about">
       <div class="my-image">
-        <img src="./img/man.jpg" alt="it's me" width="400px" />
+        <img src="./img/man.jpg" alt="it's me"  />
       </div>
       <article class="about-me">
-        <h1 style="margin-bottom: 50px; font-size: 30px">About Me</h1>
+        <h1 style="margin-bottom: 50px; font-size: 1.5rem">About Me</h1>
         <p>
           Hi! I am Aiddhul Beni Putra, a web designer/developer focused on crafting great web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into web
           design/development since 2022. I enjoy creating beautifully designed, intuitive and functional websites.
@@ -66,25 +64,34 @@
     <!-- skills start -->
 
     <section class="container-skills" id="skills">
+      <h1>Skills</h1>
       <div class="container-list-skills"></div>
     </section>
 
-<!-- skills end -->
+    <!-- skills end -->
 
     <!-- project start -->
     <section class="container-project" id="project">
       <h1>project</h1>
+      <div class="container-project-items">
+        <div class="project-items"></div>
+        <div class="project-items"></div>
+        <div class="project-items"></div>
+        <div class="project-items"></div>
+        <div class="project-items"></div>
+        <div class="project-items"></div>
+      </div>
     </section>
     <!-- project end -->
 
     <!-- contact start -->
     <section class="container-contact" id="contact">
       <form action="">
-        <input type="text" placeholder="Name"/><br>
-        <input type="email" name="email" id="" placeholder="Email"/><br>
-        <textarea name="message" id="message" cols="2" rows="4"></textarea><br>
+        <input type="text" placeholder="Name" /><br />
+        <input type="email" name="email" id="" placeholder="Email" /><br />
+        <textarea name="message" id="message" cols="2" rows="4"></textarea><br />
         <input type="button" value="Send" />
-      </form>   
+      </form>
     </section>
     <!-- contact end -->
   </body>
