styling for mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <h3 style="font-weight: 100; font-size: 24px; line-height: 36px">Welcome to my portfolio</h3>
         <h1>Hi! I'm Beni, web designer and frontend web developer</h1>
       </div>
-      <div class="content-contact"></div>
+      <div class="content-contact">
+
+      </div>
       <div class="content-image">
         <img src="./img/img.png" alt="landing page" />
       </div>
