--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio | Aiddhul Beni Putra</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,7 +14,7 @@
     <header>
       <nav class="container-navbar">
         <div class="logo">
-          <a href="#home"> Aiddhul Beni </a>
+          <a href="#home">Aiddhul Beni</a>
         </div>
         <div class="item-list">
           <ul>
@@ -32,7 +34,7 @@
 
     <section class="container-landing-page" id="home">
       <div class="content-intro">
-        <h3 style="font-weight: 100; font-size: 24px; line-height: 36px">Welcome to my portfolio</h3>
+        <h3 style="font-weight: 100; ; line-height: 36px">Welcome to my portfolio</h3>
         <h1>Hi! I'm Beni, web designer and frontend web developer</h1>
       </div>
       <div class="content-contact">
@@ -52,7 +54,7 @@
         <img src="./img/man.jpg" alt="it's me"  />
       </div>
       <article class="about-me">
-        <h1 style="margin-bottom: 50px; font-size: 1.5rem">About Me</h1>
+        <h1 style="margin: 50px auto 30px; font-size: 1.5rem">About Me</h1>
         <p>
           Hi! I am Aiddhul Beni Putra, a web designer/developer focused on crafting great web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into web
           design/development since 2022. I enjoy creating beautifully designed, intuitive and functional websites.
@@ -66,7 +68,7 @@
     <!-- skills start -->
 
     <section class="container-skills" id="skills">
-      <h1>Skills</h1>
+      <h1 style="margin: 20px auto">Skills</h1>
       <div class="container-list-skills"></div>
     </section>
 
@@ -74,7 +76,7 @@
 
     <!-- project start -->
     <section class="container-project" id="project">
-      <h1>project</h1>
+      <h1 style="margin: 20px auto">project</h1>
       <div class="container-project-items">
         <div class="project-items"></div>
         <div class="project-items"></div>
@@ -96,5 +98,9 @@
       </form>
     </section>
     <!-- contact end -->
+
+
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
