--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="website">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio | Aiddhul Beni Putra</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,7 +12,7 @@
     <header>
       <nav class="container-navbar">
         <div class="logo">
-          <a href="#home">Aiddhul Beni</a>
+          <a href="#website">Aiddhul Beni</a>
         </div>
         <div class="item-list">
           <ul>
@@ -34,12 +32,10 @@
 
     <section class="container-landing-page" id="home">
       <div class="content-intro">
-        <h3 style="font-weight: 100; ; line-height: 36px">Welcome to my portfolio</h3>
+        <h3 style="font-weight: 100; line-height: 36px">Welcome to my portfolio</h3>
         <h1>Hi! I'm Beni, web designer and frontend web developer</h1>
       </div>
-      <div class="content-contact">
-
-      </div>
+      <div class="content-contact"></div>
       <div class="content-image">
         <img src="./img/img.png" alt="landing page" />
       </div>
@@ -51,7 +47,7 @@
 
     <section class="container-about" id="about">
       <div class="my-image">
-        <img src="./img/man.jpg" alt="it's me"  />
+        <img src="./img/man.jpg" alt="it's me" />
       </div>
       <article class="about-me">
         <h1 style="margin: 50px auto 30px; font-size: 1.5rem">About Me</h1>
@@ -98,7 +94,6 @@
       </form>
     </section>
     <!-- contact end -->
-
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
