--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src="./img/man.jpg" alt="it's me" />
       </div>
       <article class="about-me">
-        <h1 style="margin: 50px auto 30px; font-size: 1.5rem">About Me</h1>
+        <h1 style="margin: 50px; font-size: 1.5rem; text-align: center;">About Me</h1>
         <p>
           Hi! I am Aiddhul Beni Putra, a web designer/developer focused on crafting great web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into web
           design/development since 2022. I enjoy creating beautifully designed, intuitive and functional websites.
