--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#project">Projects</a></li>
             <li><a href="#contact" class="btn-contact">Contact</a></li>
+            <a href="http://google.com" target="_blank" rel="noopener noreferrer" class="waduh"></a>
           </ul>
         </div>
       </nav>
@@ -35,9 +36,9 @@
         <h3 style="font-weight: 100; line-height: 36px">Welcome to my portfolio</h3>
         <h1>Hi! I'm Beni, web designer and frontend web developer</h1>
       </div>
-      <div class="content-contact"></div>
+      <!-- <div class="content-contact"></div> -->
       <div class="content-image">
-        <img src="./img/img.png" alt="landing page" />
+        <img src="./img/img.png" alt="landing page" width="60%" />
       </div>
     </section>
 
@@ -46,17 +47,19 @@
     <!-- about start -->
 
     <section class="container-about" id="about">
-      <div class="my-image">
-        <img src="./img/man.jpg" alt="it's me" />
+      <h1 style="font-size: 1.5rem; text-align: center">About Me</h1>
+      <div class="content-about">
+        <div class="my-image">
+          <img src="./img/man.jpg" alt="it's me" />
+        </div>
+        <div class="about-me">
+          <p>
+            Hi! I am Aiddhul Beni Putra, a web designer/developer focused on crafting great web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into web
+            design/development since 2022. I enjoy creating beautifully designed, intuitive and functional websites.
+          </p>
+          <button class="btn-my-cv"><a href="">Download CV</a></button>
+        </div>
       </div>
-      <article class="about-me">
-        <h1 style="margin: 50px; font-size: 1.5rem; text-align: center;">About Me</h1>
-        <p>
-          Hi! I am Aiddhul Beni Putra, a web designer/developer focused on crafting great web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into web
-          design/development since 2022. I enjoy creating beautifully designed, intuitive and functional websites.
-        </p>
-        <button class="btn-my-cv"><a href="">Download CV</a></button>
-      </article>
     </section>
 
     <!-- about end -->
