--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#project">Projects</a></li>
             <li><a href="#contact" class="btn-contact">Contact</a></li>
-            <a href="http://google.com" target="_blank" rel="noopener noreferrer" class="waduh"></a>
+            <!-- <li><a href="http://google.com" target="_blank" class="waduh">hai</a></li> -->
           </ul>
         </div>
       </nav>
@@ -38,7 +38,7 @@
       </div>
       <!-- <div class="content-contact"></div> -->
       <div class="content-image">
-        <img src="./img/img.png" alt="landing page" width="60%" />
+        <img src="./img/landing.png" alt="landing page" width="100%" />
       </div>
     </section>
 
@@ -97,6 +97,10 @@
       </form>
     </section>
     <!-- contact end -->
+
+    <footer>
+      copyright 
+    </footer>
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
